Fix email-type field error overflowing

--- a/frontend/src/components/modals/modalparts/CustomerModalParts.module.scss
+++ b/frontend/src/components/modals/modalparts/CustomerModalParts.module.scss
@@ -2,6 +2,7 @@
 
 .section {
   margin-bottom: 20px;
+  max-width: 450px;
 }
 
 .colorSection {
